# serum-vst3-renderer

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
src/apps/: BatchRendererMain.cpp  StateCapturerMain.cpp
src/common/: Hash.cpp  Hash.h  Log.cpp  Log.h  Paths.cpp  Paths.h
src/midi/: SyntheticMidiGenerator.cpp  SyntheticMidiGenerator.h
src/render/: AudioStats.cpp  AudioStats.h  OfflineRenderer.cpp  OfflineRenderer.h  WavWriter.cpp  WavWriter.h
src/vst/: PluginFactory.cpp  PluginFactory.h  PluginScanner.cpp  PluginScanner.h  PresetStateIO.cpp  PresetStateIO.h
